package TGMathLogic;

import TGLogic.TGOpenFile;

import java.util.ArrayList;

public interface Math {
 String  parsingInfoArray(ArrayList<Integer> numbers, TGOpenFile tgOpenFile);

}
